--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@web2docx/web2docx-sdk": "^1.0.7",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
